nbproject/private/Default-build.log
g++    -c -o Filer.o Filer.cpp
In file included from Filer.cpp:1:0:
tempBasedStegonography.h:11:29: error: conflicting declaration ‘typedef long long unsigned int ulong’
 typedef unsigned long long  ulong;
                             ^
In file included from /usr/include/stdlib.h:314:0,
                 from /usr/include/c++/4.9/cstdlib:72,
                 from /usr/include/c++/4.9/bits/stl_algo.h:59,
                 from /usr/include/c++/4.9/algorithm:62,
                 from tempBasedStegonography.h:5,
                 from Filer.cpp:1:
/usr/include/x86_64-linux-gnu/sys/types.h:150:27: note: previous declaration as ‘typedef long unsigned int ulong’
 typedef unsigned long int ulong;
                           ^
Filer.cpp: In member function ‘ulong filer::Filer::readFile(std::string, uchar**)’:
Filer.cpp:3:61: error: no matching function for call to ‘std::basic_ifstream<char>::basic_ifstream(std::string&, std::_Ios_Openmode)’
  std::ifstream in(filename, std::ios::binary | std::ios::ate);
                                                             ^
Filer.cpp:3:61: note: candidates are:
In file included from tempBasedStegonography.h:4:0,
                 from Filer.cpp:1:
/usr/include/c++/4.9/fstream:470:7: note: std::basic_ifstream<_CharT, _Traits>::basic_ifstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       basic_ifstream(const char* __s, ios_base::openmode __mode = ios_base::in)
       ^
/usr/include/c++/4.9/fstream:470:7: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘const char*’
/usr/include/c++/4.9/fstream:456:7: note: std::basic_ifstream<_CharT, _Traits>::basic_ifstream() [with _CharT = char; _Traits = std::char_traits<char>]
       basic_ifstream() : __istream_type(), _M_filebuf()
       ^
/usr/include/c++/4.9/fstream:456:7: note:   candidate expects 0 arguments, 2 provided
/usr/include/c++/4.9/fstream:430:11: note: std::basic_ifstream<char>::basic_ifstream(const std::basic_ifstream<char>&)
     class basic_ifstream : public basic_istream<_CharT, _Traits>
           ^
/usr/include/c++/4.9/fstream:430:11: note:   candidate expects 1 argument, 2 provided
Filer.cpp: In member function ‘void filer::Filer::writeFile(std::string, uchar**)’:
Filer.cpp:69:21: error: no matching function for call to ‘std::basic_ofstream<char>::basic_ofstream(std::basic_string<char>, const openmode&)’
   , std::ios::binary);
                     ^
Filer.cpp:69:21: note: candidates are:
In file included from tempBasedStegonography.h:4:0,
                 from Filer.cpp:1:
/usr/include/c++/4.9/fstream:643:7: note: std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       basic_ofstream(const char* __s,
       ^
/usr/include/c++/4.9/fstream:643:7: note:   no known conversion for argument 1 from ‘std::basic_string<char>’ to ‘const char*’
/usr/include/c++/4.9/fstream:628:7: note: std::basic_ofstream<_CharT, _Traits>::basic_ofstream() [with _CharT = char; _Traits = std::char_traits<char>]
       basic_ofstream(): __ostream_type(), _M_filebuf()
       ^
/usr/include/c++/4.9/fstream:628:7: note:   candidate expects 0 arguments, 2 provided
/usr/include/c++/4.9/fstream:602:11: note: std::basic_ofstream<char>::basic_ofstream(const std::basic_ofstream<char>&)
     class basic_ofstream : public basic_ostream<_CharT,_Traits>
           ^
/usr/include/c++/4.9/fstream:602:11: note:   candidate expects 1 argument, 2 provided
<builtin>: recipe for target 'Filer.o' failed
make: *** [Filer.o] Error 1
